section-1 tayyoq boldi

--- a/index.html
+++ b/index.html
@@ -6,10 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-    <h1>hello World</h1>
+    <section class="section-1">
+        <header>
+            <img src="./style/png/01-01 1.png" alt="">
+            <nav>
+                <p>Cars</p>
+                <p>History</p>
+                <p>Services</p>
+                <p>Shop</p>
+            </nav>
+            <div class="img">
+                <img src="./style/svg/sumka.svg" alt="">
+                <img src="./style/svg/lupa.svg" alt="">
+            </div>
+        </header>
+        <main>
+            <h1>CHEVROLET<span>CAMARO</span></h1>
+            <p>The Chevrolet Camaro is a mid-size American automobile manufactured by Chevrolet, classified <br>
+                as a pony car. It first went on sale on September 29, 1966, for the 1967 model year </p>
+            <img class="car" src="./style/png/car qizil.png" alt="">
+            <div class="text">
+                <p>Design</p>
+                <p>Comfort</p>
+                <p>Safety</p>
+                <p>Spaces</p>
+            </div>
+        </main>
+    </section>
+    <section class="section-2">
+
+    </section>
 </body>
 
 </html>
