--- a/index.html
+++ b/index.html
@@ -38,7 +38,72 @@
         </main>
     </section>
     <section class="section-2">
+        <div class="qator-1">
+            <div class="text">
+                <p>Book A Test Drive</p>
+                <div class="img-text">
+                    <img src="./style/svg/Location.svg" alt="">
+                    <p>2749 Whitetail Lane, Dallas, TX</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box-1">
+                    <h3>2.4 sec</h3>
+                    <p>From 0-60 mph</p>
+                </div>
+                <div class="box-2">
+                    <h3>6.2L V8</h3>
+                    <p>Engine</p>
+                </div>
+                <div class="box-3">
+                    <h3>6 Speed</h3>
+                    <p>Manual Gear</p>
+                </div>
+            </div>
+        </div>
 
+        <div class="text-box">
+            <div class="text">
+                <h1>We are working with <br>
+                    130+ top class partner <br>
+                    around the world
+                </h1>
+                <a href="#">
+                    Explore Now
+                    <img src="./style/svg/strelka.svg" alt="">
+                </a>
+            </div>
+            <div class="box">
+                <div class="box-1">
+                    <div class="box">
+                        <img src="./style/svg/tesla.svg" alt="">
+                        <p>Tesla, Inc. is an American electric
+                            vehicle and clean energy
+                            company based in Austin, Texas,
+                            United States.</p>
+                    </div>
+                    <div class="box">
+                        <img src="./style/svg/audi.svg" alt="">
+                        <p>Audi AG is a German automotive
+                            manufacturer of luxury vehicles
+                            headquartered in Ingolstadt,
+                            Bavaria, Germany</p>
+                    </div>
+                </div>
+                <div class="box-2">
+                    <div class="box">
+                        <img src="./style/svg/chevrolet.svg" alt="">
+                        <p>Chevrolet, colloquially referred to as Chevy and formally the Chevrolet Division of General
+                            Motors Company</p>
+                    </div>
+                    <div class="box">
+                        <img src="./style/svg/ferari.svg" alt="">
+                        <p>Ferrari S.p.A. is an Italian luxury sports car manufacturer based in Maranello, Italy.
+                            Founded by Enzo Ferrari in 1939</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
